# marty-verifier

./: .cliff.toml  .gitignore  .gitleaksignore  CHANGELOG.md  Cargo.toml  README.md  build.bat  build.sh  deny.toml  dependency-health.yml  marty-verifier.key.pub
.github/: dependabot.yml
.github/actions/configure-private-git-auth/: action.yml
.github/workflows/: auto-update-deps.yml  changelog.yml  ci.yml  cleanup-artifacts.yml  license-compliance.yml  monthly-node-maintenance.yml  open-source-policy.yml  organization-quality.yml  publication-audit.yml  publish-sync.yml  release-rc.yml  release-stable.yml  test.yml
crates/marty-app-storage/: CHANGELOG.md  Cargo.toml
crates/marty-app-storage/src/: database.rs  keychain.rs  lib.rs  models.rs  schema.rs
crates/marty-entitlements/: Cargo.toml
crates/marty-entitlements/src/: lib.rs
crates/marty-license/: CHANGELOG.md  Cargo.toml
crates/marty-license/src/: claims.rs  error.rs  fingerprint.rs  lib.rs  manager.rs  validation.rs
crates/marty-reporting/: CHANGELOG.md  Cargo.toml
crates/marty-reporting/src/: config.rs  error.rs  events.rs  lib.rs  reporter.rs
crates/marty-sync/: CHANGELOG.md  Cargo.toml
crates/marty-sync/src/: engine.rs  error.rs  lib.rs  policy.rs  profile_sync.rs  signing_key.rs  sources.rs  usb.rs
crates/marty-verifier-storage/: Cargo.toml
crates/marty-verifier-storage/src/: encryption.rs  error.rs  keychain.rs  lib.rs  schema.rs
docs/: CODE_SIGNING.md
scripts/: build-dmg.sh  generate_dev_license.sh  test-watch.sh
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  error.rs  hardware.rs  lib.rs  main.rs  runtime_config.rs  state.rs
src-tauri/src/commands/: biometrics.rs  config.rs  hardware.rs  license.rs  mod.rs  profile_sync.rs  storage.rs  sync.rs  update.rs  verification.rs
src-tauri/tests/: dtc_conformance.rs  emrtd_conformance.rs  oid4vp_conformance.rs  open_badge_conformance.rs
src-tauri/tests/fixtures/conformance/: presentation_definition.json  presentation_submission.json  vp_token_jwt.txt
ui/: .eslintrc.cjs  .gitignore  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
ui/playwright/: fixtures.ts
ui/playwright/tests/: license.spec.ts  settings.spec.ts  sync.spec.ts  verification.spec.ts
ui/src/: App.tsx  main.tsx
ui/src/__tests__/: FlowsPage.test.tsx
ui/src/__tests__/components/: VerificationResultCard.test.tsx
ui/src/__tests__/services/: tauri-api.test.ts
ui/src/__tests__/store/: app-store.test.ts
ui/src/components/: DeploymentProfileManager.css  DeploymentProfileManager.tsx  FlowExecutionList.tsx  FlowForm.tsx  FlowStepVisualizer.tsx  Layout.tsx  LicenseWarningBanner.tsx  OfflineStatusBanner.tsx  VerificationResultCard.tsx  VerifierPanel.tsx  index.ts
ui/src/pages/: ApprovalQueuePage.tsx  FlowsPage.tsx  LicensePage.tsx  SettingsPage.tsx  SyncPage.tsx  VerificationPage.tsx  index.ts
ui/src/services/: tauri-api.ts
ui/src/store/: app-store.ts  flow-store.ts
ui/src/test/: setup.ts
