[package]
name = "marty-verifier"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Offline-first edge verification kiosk application"
build = "build.rs"

[features]
default = ["iaca", "csca", "oid4vp", "sd-jwt", "reporting"]

# Credential verification standards
iaca = []           # AAMVA mDL verification (ISO 18013-5)
csca = []           # ICAO eMRTD verification (ICAO 9303)
oid4vp = []         # OpenID for Verifiable Presentations
sd-jwt = []         # SD-JWT Verifiable Credentials

# Hardware features
biometrics = ["marty-biometrics"]
nfc = []            # NFC reader for eMRTD chip
ble = []            # BLE for mDL device engagement

# Optional modules
reporting = ["marty-reporting"]

# Build variants
no-reporting = []   # Explicitly exclude reporting from build

[dependencies]
tauri.workspace = true
tauri-plugin-shell.workspace = true
tauri-plugin-updater.workspace = true

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true
base64.workspace = true
x509-cert = { workspace = true }
ring.workspace = true
url.workspace = true

# Platform utilities
directories = "5.0"

# Internal crates
marty-secure-storage.workspace = true
marty-license.workspace = true
marty-sync.workspace = true

# Optional crates
marty-biometrics = { workspace = true, optional = true }
marty-reporting = { workspace = true, optional = true }

# Verification crates from marty-core (via workspace)
marty-verification.workspace = true
marty-crypto.workspace = true

[build-dependencies]
tauri-build.workspace = true

[dev-dependencies]
tempfile = "3.14"
