[package]
name = "marty-license"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "License validation and management for Marty Verifier"

[features]
default = []
tpm = []  # TPM 2.0 hardware binding

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true
chrono.workspace = true
jsonwebtoken.workspace = true
ed25519-dalek.workspace = true
blake3.workspace = true

marty-secure-storage.workspace = true

# For hardware fingerprinting
sysinfo = "0.32"
base64 = "0.22"

[dev-dependencies]
tempfile = "3.14"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
