[package]
name = "marty-sync"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Trust anchor sync engine for Marty Verifier"

[features]
default = ["aamva", "icao"]
aamva = []  # AAMVA DTS sync
icao = []   # ICAO PKD sync

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
tracing.workspace = true
chrono.workspace = true
reqwest = { workspace = true, optional = true }

marty-secure-storage.workspace = true

# Certificate parsing
x509-cert = "0.2"
der = { version = "0.7", features = ["std"] }
base64 = "0.22"
blake3 = "1.5"

[dev-dependencies]
tempfile = "3.14"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
