[package]
name = "marty-sync"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Trust anchor sync engine for Marty Verifier"
repository.workspace = true

[features]
default = ["aamva", "icao"]
aamva = []  # AAMVA DTS sync
icao = []   # ICAO PKD sync

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
tracing.workspace = true
chrono.workspace = true
reqwest = { workspace = true, features = ["json"] }

marty-secure-storage.workspace = true
marty-verification.workspace = true

# Certificate parsing
x509-cert = "0.2"
der = { version = "0.8", features = ["std"] }
base64 = "0.22"
blake3 = "1.5"
ed25519-dalek = { workspace = true }

[dev-dependencies]
tempfile = "3.14"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
