[package]
name = "marty-secure-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Secure encrypted storage for Marty Verifier"

[features]
default = []
sqlcipher = ["rusqlite/bundled-sqlcipher"]

[dependencies]
rusqlite = { workspace = true, features = ["bundled-sqlcipher"] }
keyring.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
blake3.workspace = true
directories.workspace = true

# Encryption
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
hex = "0.4"

[dev-dependencies]
tempfile = "3.14"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
